MET-6785 serveral small improvements